Se corrige barra lateral y se agrega botones de paginacion

--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -12,7 +12,18 @@ img {
     margin: 20px;
     width: 60%; 
 }    
-#sidebar {
-    float: left;
+aside {
+    float: right;
     width: 15%;
 }
+
+.sidebar{
+
+    float: right;
+    width: 15%;
+}
+
+h2.center{
+    text-align: center;
+  }
+
